--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
   </head>
   <body>
     <div id="container">
+      <img src="./assets/logo.png" />
       <div id="tries">
       </div>
       <div class="inputForm">
         <form id="userInput">
-          <input type="text" name="input" id="inputField" />
+          <input type="text" name="input" id="inputField" placeholder="type word here" />
         </form>
-      </div>
-      <div id="error">
-
       </div>
       <div id="win">
         
+      </div>
+      <div id="solutionBox">
+        WORD
+      </div>
+      <div class="actions">
+        <button id="solution">Solution</button>
+        <button id="restart">Restart</button>
       </div>
     </div>
   </body>
