--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <div id="container">
       <img src="./assets/logo.png" />
       <div id="tries">
+        <div class="row">
+          <div class="rightLetter">L</div>
+          <div class="rightPlace">E</div>
+          <div>T</div>
+          <div>T</div>
+          <div>R</div>
+        </div>
       </div>
       <div class="inputForm">
         <form id="userInput">
