Title independent from session number

--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-  <head>
-    <title>WC 3</title>
-    <link href="./assets/style.css" rel="stylesheet" />
-    <script type="module" src="./js/index.js" defer></script>
-  </head>
-  <body>
-    <div id="container">
-      <img src="./assets/logo.png" />
-      <div id="tries">
-        <div class="row">
-          <div class="rightLetter">L</div>
-          <div class="rightPlace">E</div>
-          <div>T</div>
-          <div>T</div>
-          <div>R</div>
-        </div>
-      </div>
-      <div class="inputForm">
-        <form id="userInput">
-          <input type="text" name="input" id="inputField" placeholder="type word here" />
-        </form>
-      </div>
-      <div id="win">
-        
-      </div>
-      <div id="solutionBox">
-        WORD
-      </div>
-      <div class="actions">
-        <button id="solution">Solution</button>
-        <button id="restart">Restart</button>
+
+<head>
+  <title>Wordle</title>
+  <link href="./assets/style.css" rel="stylesheet" />
+  <script type="module" src="./js/index.js" defer></script>
+</head>
+
+<body>
+  <div id="container">
+    <img src="./assets/logo.png" />
+    <div id="tries">
+      <div class="row">
+        <div class="rightLetter">L</div>
+        <div class="rightPlace">E</div>
+        <div>T</div>
+        <div>T</div>
+        <div>R</div>
       </div>
     </div>
-  </body>
+    <div class="inputForm">
+      <form id="userInput">
+        <input type="text" name="input" id="inputField" placeholder="type word here" />
+      </form>
+    </div>
+    <div id="win">
+
+    </div>
+    <div id="solutionBox">
+      WORD
+    </div>
+    <div class="actions">
+      <button id="solution">Solution</button>
+      <button id="restart">Restart</button>
+    </div>
+  </div>
+</body>
+
 </html>
